Fixing alignment error in IE9.

--- a/web-app/css/cgrails/default/less/flashcards.less
+++ b/web-app/css/cgrails/default/less/flashcards.less
@@ -146,6 +146,7 @@
 	  			display:table-cell;
 	  			padding-left:10px;
 	  			vertical-align:middle;
+	  			width:99%;
 	  		}
 	  		i	{
 	  			font-size:40px;
